Create gh-pages branch via GitHub

--- a/index.html
+++ b/index.html
@@ -42,47 +42,47 @@
 <a id="a-quick-example" class="anchor" href="#a-quick-example" aria-hidden="true"><span class="octicon octicon-link"></span></a>A quick example</h3>
 
 <div class="highlight highlight-elixir"><pre>  <span class="pl-k">defmodule</span> <span class="pl-en">MyApp.Mailer</span> <span class="pl-k">do</span>
-<span class="pl-s2">    <span class="pl-k">def</span> <span class="pl-s2">deliver(email)</span> <span class="pl-k">do</span></span>
-      <span class="pl-vo">Mailman</span>.deliver(email, config)
+    <span class="pl-k">def</span> deliver(email) <span class="pl-k">do</span>
+      <span class="pl-c1">Mailman</span>.deliver(email, config)
     <span class="pl-k">end</span>
 
-<span class="pl-s2">    <span class="pl-k">def</span> <span class="pl-s2">config</span> <span class="pl-k">do</span></span>
-      %<span class="pl-vo">Mailman</span>.<span class="pl-vo">Context</span>{
-          <span class="pl-c1">config:</span>   %<span class="pl-vo">Mailman</span>.<span class="pl-vo">LocalSmtpConfig</span>{ <span class="pl-c1">port:</span> <span class="pl-c1">1234</span> },
-          <span class="pl-c1">composer:</span> %<span class="pl-vo">Mailman</span>.<span class="pl-vo">EexComposeConfig</span>{}
+    <span class="pl-k">def</span> config <span class="pl-k">do</span>
+      %<span class="pl-c1">Mailman</span>.<span class="pl-c1">Context</span>{
+          <span class="pl-c1">config:</span>   %<span class="pl-c1">Mailman</span>.<span class="pl-c1">LocalSmtpConfig</span>{ <span class="pl-c1">port:</span> <span class="pl-c1">1234</span> },
+          <span class="pl-c1">composer:</span> %<span class="pl-c1">Mailman</span>.<span class="pl-c1">EexComposeConfig</span>{}
         }
     <span class="pl-k">end</span>
   <span class="pl-k">end</span>
 
 <span class="pl-c">  # somewhere where you start other services in your app:</span>
-  <span class="pl-vo">Mailman</span>.<span class="pl-vo">LocalServer</span>.start <span class="pl-c1">1234</span> <span class="pl-c"># just pass the port number you want</span>
+  <span class="pl-c1">Mailman</span>.<span class="pl-c1">LocalServer</span>.start <span class="pl-c1">1234</span> <span class="pl-c"># just pass the port number you want</span>
 
 <span class="pl-c">  # somewhere else:</span>
-<span class="pl-s2">  <span class="pl-k">def</span> <span class="pl-s2">testing_email</span> <span class="pl-k">do</span></span>
-    %<span class="pl-vo">Mailman</span>.<span class="pl-vo">Email</span>{
-      <span class="pl-c1">subject:</span> <span class="pl-s1"><span class="pl-pds">"</span>Hello Mailman!<span class="pl-pds">"</span></span>,
-      <span class="pl-c1">from:</span> <span class="pl-s1"><span class="pl-pds">"</span>mailman@elixir.com<span class="pl-pds">"</span></span>,
-      <span class="pl-c1">to:</span> [ <span class="pl-s1"><span class="pl-pds">"</span>testy@tester123456.com<span class="pl-pds">"</span></span> ],
-      <span class="pl-c1">cc:</span> [ <span class="pl-s1"><span class="pl-pds">"</span>testy2#tester1234.com<span class="pl-pds">"</span></span>, <span class="pl-s1"><span class="pl-pds">"</span>abcd@defd.com<span class="pl-pds">"</span></span> ],
-      <span class="pl-c1">bcc:</span> [ <span class="pl-s1"><span class="pl-pds">"</span>1234@wsd.com<span class="pl-pds">"</span></span> ],
+  <span class="pl-k">def</span> testing_email <span class="pl-k">do</span>
+    %<span class="pl-c1">Mailman</span>.<span class="pl-c1">Email</span>{
+      <span class="pl-c1">subject:</span> <span class="pl-s"><span class="pl-pds">"</span>Hello Mailman!<span class="pl-pds">"</span></span>,
+      <span class="pl-c1">from:</span> <span class="pl-s"><span class="pl-pds">"</span>mailman@elixir.com<span class="pl-pds">"</span></span>,
+      <span class="pl-c1">to:</span> [ <span class="pl-s"><span class="pl-pds">"</span>testy@tester123456.com<span class="pl-pds">"</span></span> ],
+      <span class="pl-c1">cc:</span> [ <span class="pl-s"><span class="pl-pds">"</span>testy2#tester1234.com<span class="pl-pds">"</span></span>, <span class="pl-s"><span class="pl-pds">"</span>abcd@defd.com<span class="pl-pds">"</span></span> ],
+      <span class="pl-c1">bcc:</span> [ <span class="pl-s"><span class="pl-pds">"</span>1234@wsd.com<span class="pl-pds">"</span></span> ],
       <span class="pl-c1">data:</span> [
-        <span class="pl-c1">name:</span> <span class="pl-s1"><span class="pl-pds">"</span>Yo<span class="pl-pds">"</span></span>
+        <span class="pl-c1">name:</span> <span class="pl-s"><span class="pl-pds">"</span>Yo<span class="pl-pds">"</span></span>
         ],
-      <span class="pl-c1">text:</span> <span class="pl-s1"><span class="pl-pds">"</span>Hello! &lt;%= name %&gt; These are Unicode: qżźół<span class="pl-pds">"</span></span>,
-      <span class="pl-c1">html:</span> <span class="pl-s1"><span class="pl-pds">"""</span></span>
-<span class="pl-s1">&lt;html&gt;</span>
-<span class="pl-s1">&lt;body&gt;</span>
-<span class="pl-s1"> &lt;b&gt;Hello! &lt;%= name %&gt;&lt;/b&gt; These are Unicode: qżźół</span>
-<span class="pl-s1">&lt;/body&gt;</span>
-<span class="pl-s1">&lt;/html&gt;</span>
-<span class="pl-s1"><span class="pl-pds">      """</span></span>
+      <span class="pl-c1">text:</span> <span class="pl-s"><span class="pl-pds">"</span>Hello! &lt;%= name %&gt; These are Unicode: qżźół<span class="pl-pds">"</span></span>,
+      <span class="pl-c1">html:</span> <span class="pl-s"><span class="pl-pds">"""</span></span>
+<span class="pl-s">&lt;html&gt;</span>
+<span class="pl-s">&lt;body&gt;</span>
+<span class="pl-s"> &lt;b&gt;Hello! &lt;%= name %&gt;&lt;/b&gt; These are Unicode: qżźół</span>
+<span class="pl-s">&lt;/body&gt;</span>
+<span class="pl-s">&lt;/html&gt;</span>
+<span class="pl-s"><span class="pl-pds">      """</span></span>
       }
   <span class="pl-k">end</span></pre></div>
 
 <p>And then to actually send an email:</p>
 
 <div class="highlight highlight-elixir"><pre><span class="pl-c">  # Note that for now deliver/1 is blocking. In the future it will return a Task</span>
-  <span class="pl-vo">MyApp</span>.<span class="pl-vo">Mailer</span>.deliver testing_email</pre></div>
+  <span class="pl-c1">MyApp</span>.<span class="pl-c1">Mailer</span>.deliver testing_email</pre></div>
 
 <h3>
 <a id="configuring-the-mailing-context" class="anchor" href="#configuring-the-mailing-context" aria-hidden="true"><span class="octicon octicon-link"></span></a>Configuring the mailing context</h3>
@@ -103,35 +103,35 @@ will they be delivered. </p>
 
 <p>You don't access those adapters directly. Instead, you specify a config of your choice and the library does all the rest for you. The three config options corresponding with adapters are: <code>%Mailman.LocalSmtpConfig{}</code>, <code>%Mailman.SmtpConfig{}</code> and <code>%Mailman.TestConfig{}</code>.</p>
 
-<div class="highlight highlight-elixir"><pre>%<span class="pl-vo">Mailman</span>.<span class="pl-vo">Context</span>{
-    <span class="pl-c1">config:</span>   %<span class="pl-vo">Mailman</span>.<span class="pl-vo">LocalSmtpConfig</span>{ <span class="pl-c1">port:</span> <span class="pl-c1">1234</span> },
-    <span class="pl-c1">composer:</span> %<span class="pl-vo">Mailman</span>.<span class="pl-vo">EexComposeConfig</span>{}
+<div class="highlight highlight-elixir"><pre>%<span class="pl-c1">Mailman</span>.<span class="pl-c1">Context</span>{
+    <span class="pl-c1">config:</span>   %<span class="pl-c1">Mailman</span>.<span class="pl-c1">LocalSmtpConfig</span>{ <span class="pl-c1">port:</span> <span class="pl-c1">1234</span> },
+    <span class="pl-c1">composer:</span> %<span class="pl-c1">Mailman</span>.<span class="pl-c1">EexComposeConfig</span>{}
   }</pre></div>
 
 <p>Note that to be able to use the local and the test configs, you'll need to start either local SMTP server or the testing service:</p>
 
-<div class="highlight highlight-elixir"><pre>  <span class="pl-vo">Mailman</span>.<span class="pl-vo">LocalServer</span>.start(<span class="pl-c1">1234</span>)
+<div class="highlight highlight-elixir"><pre>  <span class="pl-c1">Mailman</span>.<span class="pl-c1">LocalServer</span>.start(<span class="pl-c1">1234</span>)
 <span class="pl-c">  # or:</span>
-  <span class="pl-vo">Mailman</span>.<span class="pl-vo">TestServer</span>.start</pre></div>
+  <span class="pl-c1">Mailman</span>.<span class="pl-c1">TestServer</span>.start</pre></div>
 
 <p>In this example we're setting up the library to use the local SMTP server created along with the app. In order for this to work you still have to create this process:</p>
 
-<div class="highlight highlight-elixir"><pre>pid <span class="pl-k">=</span> <span class="pl-vo">Mailman</span>.<span class="pl-vo">LocalServer</span>.start(<span class="pl-c1">1234</span>)</pre></div>
+<div class="highlight highlight-elixir"><pre>pid <span class="pl-k">=</span> <span class="pl-c1">Mailman</span>.<span class="pl-c1">LocalServer</span>.start(<span class="pl-c1">1234</span>)</pre></div>
 
 <h3>
 <a id="defining-emails" class="anchor" href="#defining-emails" aria-hidden="true"><span class="octicon octicon-link"></span></a>Defining emails</h3>
 
 <p>The email struct is defined as:</p>
 
-<div class="highlight highlight-elixir"><pre><span class="pl-k">defstruct</span> <span class="pl-c1">subject:</span> <span class="pl-s1"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, 
-  <span class="pl-c1">from:</span> <span class="pl-s1"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, 
+<div class="highlight highlight-elixir"><pre><span class="pl-k">defstruct</span> <span class="pl-c1">subject:</span> <span class="pl-s"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, 
+  <span class="pl-c1">from:</span> <span class="pl-s"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, 
   <span class="pl-c1">to:</span> [], 
   <span class="pl-c1">cc:</span> [], 
   <span class="pl-c1">bcc:</span> [], 
   <span class="pl-c1">attachments:</span> [], <span class="pl-c"># This has to be %Mailman.Attachment{}. More about attachments below</span>
   <span class="pl-c1">data:</span> %{}, <span class="pl-c"># This is the context for EEx. You put here data for your &lt;%= %&gt; placeholders</span>
-  <span class="pl-c1">html:</span> <span class="pl-s1"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, <span class="pl-c"># Actual html template</span>
-  <span class="pl-c1">text:</span> <span class="pl-s1"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, <span class="pl-c"># Actual plain template</span>
+  <span class="pl-c1">html:</span> <span class="pl-s"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, <span class="pl-c"># Actual html template</span>
+  <span class="pl-c1">text:</span> <span class="pl-s"><span class="pl-pds">"</span><span class="pl-pds">"</span></span>, <span class="pl-c"># Actual plain template</span>
   <span class="pl-c1">delivery:</span> <span class="pl-c1">nil</span> <span class="pl-c"># If the message was created through parsing of the delivered email - this holds the 'Date' header</span></pre></div>
 
 <h3>
@@ -140,7 +140,7 @@ will they be delivered. </p>
 <p>A dedicated struct has been created for describing attachments. In this version, there's a function that takes a binary representing a path to a file that's constructing this struct for you. So you can add attachments to your email definitions like this:</p>
 
 <div class="highlight highlight-elixir"><pre><span class="pl-c1">attachments:</span> [
-  <span class="pl-vo">Mailman</span>.<span class="pl-vo">Attachment</span>.inline!(<span class="pl-s1"><span class="pl-pds">"</span>test/data/blank.png<span class="pl-pds">"</span></span>)
+  <span class="pl-c1">Mailman</span>.<span class="pl-c1">Attachment</span>.inline!(<span class="pl-s"><span class="pl-pds">"</span>test/data/blank.png<span class="pl-pds">"</span></span>)
   ],</pre></div>
 
 <p>This reads the file from disk, encodes it with base64 and discovers the proper mime-type. Attachments are also properly decoded from existing emails (more on that below).</p>
@@ -152,8 +152,8 @@ will they be delivered. </p>
 
 <p>Here's an example from the test suite:</p>
 
-<div class="highlight highlight-elixir"><pre>{<span class="pl-c1">:ok</span>, message} <span class="pl-k">=</span> <span class="pl-vo">Task</span>.await <span class="pl-vo">MyApp</span>.<span class="pl-vo">Mailer</span>.deliver(email_with_attachments)
-email <span class="pl-k">=</span> <span class="pl-vo">Mailman</span>.<span class="pl-vo">Email</span>.parse! message</pre></div>
+<div class="highlight highlight-elixir"><pre>{<span class="pl-c1">:ok</span>, message} <span class="pl-k">=</span> <span class="pl-c1">Task</span>.await <span class="pl-c1">MyApp</span>.<span class="pl-c1">Mailer</span>.deliver(email_with_attachments)
+email <span class="pl-k">=</span> <span class="pl-c1">Mailman</span>.<span class="pl-c1">Email</span>.parse! message</pre></div>
 
 <p>At this point, if the source contains the 'Date' header (meaning that it was put through a mailing system) — it will have the 'delivery' field non-empty.</p>
 
@@ -162,11 +162,11 @@ email <span class="pl-k">=</span> <span class="pl-vo">Mailman</span>.<span class
 
 <p>When you use the TestServer you can take a look at the deliveries whith:</p>
 
-<div class="highlight highlight-elixir"><pre>  <span class="pl-vo">Mailman</span>.<span class="pl-vo">TestServer</span>.deliveries</pre></div>
+<div class="highlight highlight-elixir"><pre>  <span class="pl-c1">Mailman</span>.<span class="pl-c1">TestServer</span>.deliveries</pre></div>
 
 <p>Also, if you want to clear this list:</p>
 
-<div class="highlight highlight-elixir"><pre>  <span class="pl-vo">Mailman</span>.<span class="pl-vo">TestServer</span>.clear_deliveries</pre></div>
+<div class="highlight highlight-elixir"><pre>  <span class="pl-c1">Mailman</span>.<span class="pl-c1">TestServer</span>.clear_deliveries</pre></div>
 
 <h2>
 <a id="todos" class="anchor" href="#todos" aria-hidden="true"><span class="octicon octicon-link"></span></a>TODOs</h2>
@@ -178,6 +178,14 @@ email <span class="pl-k">=</span> <span class="pl-vo">Mailman</span>.<span class
 <li>[x] Ability to provide CC and BCC</li>
 <li>[ ] Unit testing (somewhat in progress)</li>
 </ul>
+
+<h2>
+<a id="contributors" class="anchor" href="#contributors" aria-hidden="true"><span class="octicon octicon-link"></span></a>Contributors</h2>
+
+<ul>
+<li>Josh Adams (<a href="">https://github.com/knewter</a>)</li>
+<li>Dan McClain (<a href="">https://github.com/danmcclain</a>)</li>
+</ul>
       </section>
     </div>
 
@@ -185,7 +193,7 @@ email <span class="pl-k">=</span> <span class="pl-vo">Mailman</span>.<span class
     <div id="footer_wrap" class="outer">
       <footer class="inner">
         <p class="copyright">Mailman maintained by <a href="https://github.com/kamilc">kamilc</a></p>
-        <p>Published with <a href="http://pages.github.com">GitHub Pages</a></p>
+        <p>Published with <a href="https://pages.github.com">GitHub Pages</a></p>
       </footer>
     </div>
 
